Fix hidden visibility settings

--- a/modules/registration-form/style.scss
+++ b/modules/registration-form/style.scss
@@ -108,13 +108,10 @@
 			float: none;
 		}
 	}
+}
 
-	.register-section {
-
-		.field-visibility-settings-toggle {
-			display: none;
-		}
-	}
+#buddypress .field-visibility-settings-toggle {
+	display: none;
 }
 
 #activate-page {
